--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "materialize-css": "^0.98.1",
+    "method-override": "^2.3.8",
+    "multer": "^1.3.0",
     "mustache-express": "^1.2.4",
     "pg-promise": "^5.6.4"
   }
