--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^2.3.8",
     "multer": "^1.3.0",
     "mustache-express": "^1.2.4",
+    "passport": "^0.3.2",
     "pg-promise": "^5.6.4"
   }
 }
