--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
@@ -21,6 +22,7 @@
     "method-override": "^2.3.8",
     "multer": "^1.3.0",
     "mustache-express": "^1.2.4",
+    "nodemailer": "^4.0.0",
     "passport": "^0.3.2",
     "pg-promise": "^5.6.4"
   }
